--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,8 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+package-lock.json
+node_modules/*
+.idea/*
+images/
+!images/.gitkeep
