--- a/config
+++ b/config
@@ -14,12 +14,12 @@
 const config = {
   db: {
     /* don't expose password or any sensitive info, done only for demo */
-    host: "dpg-cpt05rbv2p9s73avb9ng-a",
-    user: "root",
-    password: "75yJxE9yOiCWca5mJkv0RrmAkQPQGfqs",
-    database: "kdcentral",
+    host: "sql10.freesqldatabase.com",
+    user: "sql10715899",
+    password: "cPclzCkDmy",
+    database: "sql10715899",
     connectTimeout: 60000,
-    port: 5432
+    port: 3306
   },
   listPerPage: 10,
 };
