--- a/config
+++ b/config
@@ -12,12 +12,21 @@
 // module.exports = config;
 
 const config = {
+  // db: {
+  //   /* don't expose password or any sensitive info, done only for demo */
+  //   host: "sql10.freesqldatabase.com",
+  //   user: "sql10715899",
+  //   password: "cPclzCkDmy",
+  //   database: "sql10715899",
+  //   connectTimeout: 60000,
+  //   port: 3306
+  // },
   db: {
     /* don't expose password or any sensitive info, done only for demo */
-    host: "sql10.freesqldatabase.com",
-    user: "sql10715899",
-    password: "cPclzCkDmy",
-    database: "sql10715899",
+    host: "sql5.freesqldatabase.com",
+    user: "sql5717531",
+    password: "B2J3EYFB8d",
+    database: "sql5717531",
     connectTimeout: 60000,
     port: 3306
   },
