--- a/config
+++ b/config
@@ -22,14 +22,24 @@ const config = {
 //   //   connectTimeout: 60000,
 //   //   port: 3306
 //   // },
+  // db: {
+  //   /* don't expose password or any sensitive info, done only for demo */
+  //   host: "sql5.freesqldatabase.com",
+  //   user: "sql5717531",
+  //   password: "B2J3EYFB8d",
+  //   database: "sql5717531",
+  //   connectTimeout: 60000,
+  //   port: 3306
+  //   // https://www.top-password.com/iso2disc.html
+  // },
   db: {
     /* don't expose password or any sensitive info, done only for demo */
-    host: "sql5.freesqldatabase.com",
-    user: "sql5717531",
-    password: "B2J3EYFB8d",
-    database: "sql5717531",
+    host: "roundhouse.proxy.rlwy.net",
+    user: "root",
+    password: "XdpezBEDfxlJPxRdZZiMDypxbCbqshQU",
+    database: "railway",
     connectTimeout: 60000,
-    port: 3306
+    port: 20308
     // https://www.top-password.com/iso2disc.html
   },
   listPerPage: 10,
