--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "manga-api-rest",
+  "name": "transaccions-recharges-system",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
