--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "ccxt": "^4.3.75",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.7.0",
     "mongoose": "^7.6.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.1",
     "nodemon": "^3.0.1",
     "uuid": "^10.0.0"
