--- a/config
+++ b/config
@@ -1,47 +1,36 @@
+//  
+// https://www.top-password.com/iso2disc.html
+
 const config = {
+//   // db: {
+//   //   /* don't expose password or any sensitive info, done only for demo */
+//   //   host: "sql10.freesqldatabase.com",
+//   //   user: "sql10715899",
+//   //   password: "cPclzCkDmy",
+//   //   database: "sql10715899",
+//   //   connectTimeout: 60000,
+//   //   port: 3306
+//   // },
+  // db: {
+  //   /* don't expose password or any sensitive info, done only for demo */
+  //   host: "sql5.freesqldatabase.com",
+  //   user: "sql5717531",
+  //   password: "B2J3EYFB8d",
+  //   database: "sql5717531",
+  //   connectTimeout: 60000,
+  //   port: 3306
+  //   // https://www.top-password.com/iso2disc.html
+  // },
   db: {
     /* don't expose password or any sensitive info, done only for demo */
-    host: "localhost",
+    host: "roundhouse.proxy.rlwy.net",
     user: "root",
-    password: "",
-    database: "novax",
-    connectTimeout: 60000
+    password: "XdpezBEDfxlJPxRdZZiMDypxbCbqshQU",
+    database: "railway",
+    connectTimeout: 60000,
+    port: 20308
+    // https://www.top-password.com/iso2disc.html
   },
   listPerPage: 10,
 };
-module.exports = config;  
-// https://www.top-password.com/iso2disc.html
-
-// const config = {
-// //   // db: {
-// //   //   /* don't expose password or any sensitive info, done only for demo */
-// //   //   host: "sql10.freesqldatabase.com",
-// //   //   user: "sql10715899",
-// //   //   password: "cPclzCkDmy",
-// //   //   database: "sql10715899",
-// //   //   connectTimeout: 60000,
-// //   //   port: 3306
-// //   // },
-//   // db: {
-//   //   /* don't expose password or any sensitive info, done only for demo */
-//   //   host: "sql5.freesqldatabase.com",
-//   //   user: "sql5717531",
-//   //   password: "B2J3EYFB8d",
-//   //   database: "sql5717531",
-//   //   connectTimeout: 60000,
-//   //   port: 3306
-//   //   // https://www.top-password.com/iso2disc.html
-//   // },
-//   db: {
-//     /* don't expose password or any sensitive info, done only for demo */
-//     host: "roundhouse.proxy.rlwy.net",
-//     user: "root",
-//     password: "XdpezBEDfxlJPxRdZZiMDypxbCbqshQU",
-//     database: "railway",
-//     connectTimeout: 60000,
-//     port: 20308
-//     // https://www.top-password.com/iso2disc.html
-//   },
-//   listPerPage: 10,
-// };
 module.exports = config;
